// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package test;

// A test message.
message Fake {
	// A singular field tag = 1
    double f_double = 1;
	
	// A singular field tag = 2
    float f_float = 2;
	
	// A singular field tag = 3
    int64 f_int64 = 3;
	
	// A singular field tag = 4
    uint64 f_uint64 = 4;
	
	// A singular field tag = 5
    int32 f_int32 = 5;
	
	// A singular field tag = 6
    fixed64 f_fixed64 = 6;
	
	// A singular field tag = 7
    fixed32 f_fixed32 = 7;
	
	// A singular field tag = 8
    bool f_bool = 8;
	
	// A singular field tag = 9
    string f_string = 9;
	
	// A singular field tag = 12
    bytes f_bytes = 12;
	
	// A singular field tag = 13
    uint32 f_uint32 = 13;
	
	// A singular field tag = 15
    sfixed32 f_sfixed32 = 15;
	
	// A singular field tag = 16
    sfixed64 f_sfixed64 = 16;
	
	// A singular field tag = 17
    sint32 f_sint32 = 17;
	
	// A singular field tag = 18
    sint64 f_sint64 = 18;
}
