// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package test;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";

service TestService {
  option (google.api.default_host) = "test.googleapis.com";
  option (google.api.oauth_scopes) =
      "https://www.googleapis.com/auth/cloud-platform";

  rpc ListFooMissingPageSize(ListFooMissingPageSizeRequest) returns (ListFooResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=projects/*}/foos"
    };
    option (google.api.method_signature) = "parent";
  }

  rpc ListFooMissingPageToken(ListFooMissingPageTokenRequest) returns (ListFooResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=projects/*}/foos"
    };
    option (google.api.method_signature) = "parent";
  }

  rpc ListFooMissingNextPageToken(ListFooRequest) returns (ListFooMissingNextPageTokenResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=projects/*}/foos"
    };
    option (google.api.method_signature) = "parent";
  }

  rpc ListFooMissingRepeatedItemToken(ListFooRequest) returns (ListFooMissingRepeatedItemResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=projects/*}/foos"
    };
    option (google.api.method_signature) = "parent";
  }

  rpc ListFoo(ListFooRequest) returns (ListFooResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=projects/*}/foos"
    };
    option (google.api.method_signature) = "parent";
  }

}

message ListFooMissingPageSizeRequest {
    string parent = 1 [
        (google.api.field_behavior) = REQUIRED,
        (google.api.resource_reference) = {
            child_type: "test.googleapis.com/Foo"
        }
    ];

    string page_token = 3 [(google.api.field_behavior) = OPTIONAL];
}

message ListFooMissingPageTokenRequest{
    string parent = 1 [
        (google.api.field_behavior) = REQUIRED,
        (google.api.resource_reference) = {
            child_type: "test.googleapis.com/Foo"
        }
    ];
    
    int32 page_size = 2 [(google.api.field_behavior) = OPTIONAL];
}

message ListFooRequest {
    string parent = 1 [
        (google.api.field_behavior) = REQUIRED,
        (google.api.resource_reference) = {
            child_type: "test.googleapis.com/Foo"
        }
    ];
    
    int32 page_size = 2 [(google.api.field_behavior) = OPTIONAL];

    string page_token = 3 [(google.api.field_behavior) = OPTIONAL];
}

message ListFooMissingNextPageTokenResponse {
    repeated Foo foos = 1;

    int32 total_size = 3;   
}

message ListFooMissingRepeatedItemResponse {
    string next_page_token = 2;

    int32 total_size = 3;
}

message ListFooResponse {
    repeated Foo foos = 1;

    string next_page_token = 2;

    int32 total_size = 3;
}

message Foo {
    option (google.api.resource) = {
        type: "test.googleapis.com/Foo"
        pattern: "projects/{project}/foos/{foo}"
    };

    string name = 1 [(google.api.field_behavior) = OUTPUT_ONLY];
}
